--- a/news_serve/templates/translations/translations.html
+++ b/news_serve/templates/translations/translations.html
@@ -4,29 +4,24 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 
-  <h1>Welcome to News_Serve</h1>
+  <h1>Translations</h1>
 
-  <p>Help contribute news to rural Luo communities in Uganda!  Sign up to edit, translate, or read the news.</p>
+  <p>Please choose an active translation to approve or modify.</p>
   <p><a href="https://github.com/sloria/cookiecutter-flask" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div><!-- /.jumbotron -->
 
 <div class="body-content">
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-3">
       <h2><i class="fa fa-pencil-square-o"></i> Edit</h2>
       <p>Help by contributing stories that might be of interest to folks in Aber, Pabbo, Kitgum, or Patongo.</p>
       <p><a class="btn btn-default" href="http://getbootstrap.com/">Edit List&raquo;</a></p>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-3">
       <h2><i class="fa fa-files-o"></i> Translate</h2>
       <p>Know Acholi or Luo?  Please help us by translating these stories.</p>
       <p><a href="http://www.sqlalchemy.org/" class="btn btn-default" href="#">Translate List&raquo;</a></p>
    </div>
-    <div class="col-lg-4">
-      <h2><i class="fa fa-microphone"></i> Read</h2>
-      <p>Use your web browser to read these stories, or upload an audio file.</p>
-      <p><a href="http://wtforms.simplecodes.com/" class="btn btn-default" href="#">Record List &raquo;</a></p>
-    </div>
   </div><!-- /.row -->
 </div>
 {% endblock %}
