--- a/news_serve/templates/public/home.html
+++ b/news_serve/templates/public/home.html
@@ -15,7 +15,7 @@
     <div class="col-lg-4">
       <h2><i class="fa fa-pencil-square-o"></i> Edit</h2>
       <p>Help by contributing stories that might be of interest to folks in Aber, Pabbo, Kitgum, or Patongo.</p>
-      <p><a class="btn btn-default" href="http://getbootstrap.com/">Edit List&raquo;</a></p>
+      <p><a class="btn btn-default" href="/stories">Edit Stories&raquo;</a></p>
     </div>
     <div class="col-lg-4">
       <h2><i class="fa fa-files-o"></i> Translate</h2>
