Addition of the translation link service

--- a/news_serve/templates/public/home.html
+++ b/news_serve/templates/public/home.html
@@ -20,7 +20,7 @@
     <div class="col-lg-4">
       <h2><i class="fa fa-files-o"></i> Translate</h2>
       <p>Know Acholi or Luo?  Please help us by translating these stories.</p>
-      <p><a href="http://www.sqlalchemy.org/" class="btn btn-default" href="#">Translate List&raquo;</a></p>
+      <p><a class="btn btn-default" href="/translations">Translate List&raquo;</a></p>
    </div>
     <div class="col-lg-4">
       <h2><i class="fa fa-microphone"></i> Read</h2>
