changes to translations to flag ready to record

--- a/news_serve/templates/translations/delegatetranslation.html
+++ b/news_serve/templates/translations/delegatetranslation.html
@@ -20,7 +20,7 @@
         {{ form.text(cols="30", rows="20",class_="form-control") }}
       </div>
       <button type="submit" name="submit_button" value="Save" class="btn btn-default">Save and Continue</button>
-      <button type="submit" name="submit_button" value="Translate" class="btn btn-default">Save and Ready to Record</button>
+      <button type="submit" name="submit_button" value="Record" class="btn btn-default">Save and Ready to Record</button>
 
     </form>
     {% endif %}
