Changes to the home page to link recordings

--- a/news_serve/templates/public/home.html
+++ b/news_serve/templates/public/home.html
@@ -25,7 +25,7 @@
     <div class="col-lg-4">
       <h2><i class="fa fa-microphone"></i> Read</h2>
       <p>Use your web browser to read these stories, or upload an audio file.</p>
-      <p><a href="http://wtforms.simplecodes.com/" class="btn btn-default" href="#">Record List &raquo;</a></p>
+      <p><a href="/recordings" class="btn btn-default">Record List &raquo;</a></p>
     </div>
   </div><!-- /.row -->
 </div>
