--- a/news_serve/templates/recordings/recordings.html
+++ b/news_serve/templates/recordings/recordings.html
@@ -4,8 +4,31 @@
 {% block content %}
 <div class="body-content">
     <div class="row">
+     <h1>Stories Ready to Record or With Recordings</h1>
+     {% for translation in stories_to_record %}
+     <p><a href="{{url_for('.record', id = translation.id)}}">{{translation.story.title}}</a></p>{{translation.language.title}}
+     {%if not translation.recordings  %}
+        <p>No recording Available</p>
+     {%else%}
+        {% for record in translation.recordings %}
+          <p>Author: {{record.user}} Date Created {{record.created}}</p>
+        {% endfor %}
+     {% endif %}
+     {% endfor %}
+    </div>
+    <div class="row">
       <h1>Recordings</h1>
       <p>Please choose a recording to approve or delete.</p>
+       {% for record in records %}
+       <p>{{record.translation.story.title}}</p> {{record.translation.language}}
+       <p>Author: {{record.user}} Date Created {{record.created}}</p>
+       {% if record.ready_to_broadcast == True %}
+         <p>Ready for Broadcast {{ record.ready_to_broadcast}}</p>
+       {% else %}
+         <p>Recording Needed <a href="{{url_for('.record', id = record.translation.id)}}"}>edit</a></p> 
+       {% endif %}
+      
+       {% endfor %}
     </div>
 </div>
 {% endblock %}
